1.2.3i3:
    Checks & Agents:
    * windows_agent: increased maximum plugin output buffer size to 2MB
    * FIX: windows_agent: fixed bug in cleanup of open thread handles
    * FIX: cups default printer is now monitored again in linux agent
    * FIX: host notification email in html format: fixed formating error 
           (typo in tag)

    Multisite:
    * FIX: add missing service icons to view "All Services with this descr..."
    * FIX: ldap attribute plugins: fixed crash when parameters are None

1.2.3i2:
    Core:
    * New option -B for just generating the configuration
    * Introduced persistent host address lookup cache to prevent issues
      loading an unchanged configuration after a single address is not resolvable anymore
    * Assigning a service to a cluster host no longer requires a reinventory
    * Setting a check_type or service to ignore no longer requires a reinventory
      Note: If the ignore rule is removed the services will reappear
    * Config creation: The ignore services rule now also applies to custom, active
                       and legacy checks
    * Predictive monitoring: correctly handle spaces in variable names (thanks
       to Karl Golland)
    * New man page browser for console (cmk -m)
    * New option explicit_snmp_communities to override rule based SNMP settings
    * Preparations for significant SNMP monitoring performance improvement
      (It's named Inline SNMP, which is available as special feature via subscriptions)
    * Allow to specify custom host check via WATO (arbitrary command line)
    * Implement DNS caching. This can be disabled with use_dns_cache = False

    Livestatus:
    * new service column staleness: indicator for outdated service checks
    * new host    column staleness: indicator for outdated host checks

    Checks & Agents:
    * esx_hostystem multipath: criticize standby paths only if not equal to active paths
    * mk_logwatch: fixed bug when rewriting logwatch messages