@@ -1,0 +1,52 @@
+#!/usr/bin/python
+# -*- encoding: utf-8; py-indent-offset: 4 -*-
+# +------------------------------------------------------------------+
+# |             ____ _               _        __  __ _  __           |
+# |            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
+# |           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
+# |           | |___| | | |  __/ (__|   <    | |  | | . \            |
+# |            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
+# |                                                                  |
+# | Copyright Mathias Kettner 2013             mk@mathias-kettner.de |
+# +------------------------------------------------------------------+
+#
+# This file is part of Check_MK.
+# The official homepage is at http://mathias-kettner.de/check_mk.
+#
+# check_mk is free software;  you can redistribute it and/or modify it
+# under the  terms of the  GNU General Public License  as published by
+# the Free Software Foundation in version 2.  check_mk is  distributed
+# in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
+# out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
+# PARTICULAR PURPOSE. See the  GNU General Public License for more de-
+# ails.  You should have  received  a copy of the  GNU  General Public
+# License along with GNU Make; see the file  COPYING.  If  not,  write
+# to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
+# Boston, MA 02110-1301 USA.
+
+def check_icmp_arguments(params):
+    args = []
+    rta = 200, 500
+    loss = 80, 100
+    for key, value in params.items():
+        if key == "timeout":
+            args.append("-t %d" % value)
+        elif key == "packets":
+            args.append("-n %d" % value)
+        elif key == "rta":
+            rta = value
+        elif key == "loss":
+            loss = value
+    args.append("-w %.2f,%.2f%%" % (rta[0], loss[0]))
+    args.append("-c %.2f,%.2f%%" % (rta[1], loss[1]))
+    args.append("'$HOSTADDRESS$'")
+    return " ".join(args)
+
+
+active_check_info['icmp'] = {
+    "command_line"        : '$USER1$/check_icmp $ARG1$',
+    "argument_function"   : check_icmp_arguments,
+    "service_description" : lambda args: args.get("description", "PING"),
+    "has_perfdata"        : True,
+}
+
