@@ -50,44 +50,8 @@ register_rule(group + "/" + subgroup_networking,
         help = _("This rule sets the parameters for the host checks (via <tt>check_icmp</tt>) "
                  "and also for PING checks on ping-only-hosts. For the host checks only the "
                  "critical state is relevant, the warning levels are ignored."),
-        elements = [
-           ( "rta",
-             Tuple(
-                 title = _("Round trip average"),
-                 elements = [
-                     Float(title = _("Warning if above"), unit = "ms"),
-                     Float(title = _("Critical if above"), unit = "ms"),
-                 ])),
-           ( "loss",
-             Tuple(
-                 title = _("Packet loss"),
-                 help = _("When the percentual number of lost packets is equal or greater then "
-                          "the level, then the according state is triggered. The default for critical "
-                          "is 100%. That means that the check is only critical if <b>all</b> packets "
-                          "are lost."),
-                 elements = [
-                     Percentage(title = _("Warning if above")),
-                     Percentage(title = _("Critical if above")),
-                 ])),
-
-            ( "packets",
-              Integer(
-                  title = _("Number of packets"),
-                  help = _("Number ICMP echo request packets to send to the target host on each "
-                           "check execution. All packets are sent directly on check execution. Afterwards "
-                           "the check waits for the incoming packets."),
-                  minvalue = 1,
-                  maxvalue = 20,
-               )),
-
-             ( "timeout",
-               Integer(
-                   title = _("Total timeout of check"),
-                   help = _("After this time (in seconds) the check is aborted, regardless "
-                            "of how many packets have been received yet."),
-                   minvalue = 1,
-               )),
-        ]),
+        elements = check_icmp_params,
+        ),
         match="dict")
 
 register_rule(group + '/' + subgroup_applications,
